⚰ Remove `settings.DISCORD_BOT_TOKEN`

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,16 +1,16 @@
+### Required environment variables
 ELECTRO__DATABASE_URL=
 ELECTRO__REDIS_URL=
-
-
-ELECTRO__DISCORD_BOT_TOKEN=
 
 ELECTRO__DEBUG=True
 ELECTRO__LOG_LEVEL=DEBUG
 
 ELECTRO__LOCALES_PATH='example/locales'
 
-# Images storage
-ELECTRO__STORAGE_SERVICE_ID='S3'
+
+### Optional environment variables
+# region Images storage. Set `''` to not use the Images storage
+ELECTRO__STORAGE_SERVICE_ID='S3'  # You have to set only the configs for this service
 
 # S3 storage
 ELECTRO__S3_ENDPOINT_URL=
@@ -30,7 +30,9 @@ ELECTRO__AZURE_STORAGE_ACCOUNT_NAME=
 
 ELECTRO__AZURE_CONTAINER_NAME=images
 
+# endregion
 
-# Used in the `Makefile`
+
+# Optional, used in `Makefile`
 POEDITOR__API_TOKEN=
 POEDITOR__PROJECT_ID=
