--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "migrations/electro"]
 	path = migrations/electro
-	url = https://github.com/CyberCRI/electro-migrations.git
+	url = git@github.com:CyberCRI/electro-migrations.git
